[gd_scene load_steps=3 format=2]

[ext_resource path="res://MicRecord.gd" type="Script" id=1]

[sub_resource type="AudioStreamMicrophone" id=1]

[node name="MicRecord" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -240.0
margin_right = 320.0
margin_bottom = 240.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamRecord" type="AudioStreamPlayer" parent="."]
stream = SubResource( 1 )
autoplay = true
bus = "Record"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
autoplay = true

[node name="RecordButton" type="Button" parent="."]
margin_left = 120.0
margin_top = 100.0
margin_right = 240.0
margin_bottom = 140.0
text = "Record"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="."]
margin_left = 300.0
margin_top = 100.0
margin_right = 420.0
margin_bottom = 140.0
disabled = true
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="RecordButton" to="." method="_on_RecordButton_pressed"]
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
